# dev-translator

./: .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.hf  Dockerfile.ngc  LICENSE  README.md  docker-compose.yml  launch.sh
backend/: Dockerfile  Dockerfile.cuda  README.md  docker-compose.yml  pyproject.toml
backend/seamless_api/: __init__.py  config.py  languages.json  languages.md  main.py  models.py  translator.py  translator_hf.py
docker/: Dockerfile.core
scripts/: setup.sh
src/: backend.rs  config.rs  main.rs
